--- a/packages/bgipfs/templates/nginx.proxy.conf
+++ b/packages/bgipfs/templates/nginx.proxy.conf
@@ -21,44 +21,23 @@ http {
         listen 80;
         server_name ${GATEWAY_DOMAIN};
 
-        # IPFS redirect
-        location ~ ^/ipfs/([^/]+)(/.+)?$ {
-            return 301 https://$1.ipfs.${GATEWAY_DOMAIN}$2$is_args$args;
-        }
-
-        # IPNS passthrough
-        location ~ ^/ipns/ {
-            proxy_pass http://ipfs:8080;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # Root path only
-        location = / {
-            proxy_pass http://ipfs:8080;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # Block everything else
         location / {
-            return 404;
+            proxy_pass http://ipfs:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 
     # Subdomain gateway server
     server {
         listen 80;
-        server_name "~^([^.]+)\.ipfs\.${GATEWAY_DOMAIN}$";
+        server_name "~^([^.]+)\.${GATEWAY_DOMAIN}$";
 
         location / {
-            # Pass to IPFS gateway with path prefix but keep original host
-            proxy_pass http://ipfs:8080/ipfs/$1$request_uri;
-            proxy_set_header Host $host;  # Keep original subdomain host
+            proxy_pass http://ipfs:8080;
+            proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
