--- a/packages/bgipfs/templates/nginx.ip.conf
+++ b/packages/bgipfs/templates/nginx.ip.conf
@@ -1,4 +1,3 @@
-# Simple config for development - just secure upload
 events {
     worker_connections 1024;
 }
@@ -10,22 +9,27 @@ http {
     tcp_nodelay on;
     keepalive_timeout 65;
 
-    # Upload endpoint only
     server {
         listen 5555;
         server_name localhost;
 
         location ~ ^/api/v0/(add|cat|pin/ls|pin/add) {
-            auth_basic "IPFS Upload";
-            auth_basic_user_file /etc/nginx/.htpasswd;
+            
+            # Only the essential settings for streaming
+            client_max_body_size 0;
+            proxy_request_buffering off;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            
+            # Explicitly handle upgrade requests (for websocket/streaming)
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
             
             proxy_pass http://cluster:9095;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
         }
 
         location / {
             return 404;
         }
     }
-} 
+}
