--- a/packages/bgipfs/templates/docker-compose.proxy.yml
+++ b/packages/bgipfs/templates/docker-compose.proxy.yml
@@ -4,16 +4,46 @@ services:
     ports:
       - "4001:4001"  # swarm
       - "5001:5001"  # api
-      # Note: No 8080 port since gateway is handled by nginx
+      # Note: No 8080 port since gateway is handled by traefik
+    labels:
+      - "traefik.enable=true"
+      # Main gateway
+      - "traefik.http.routers.gateway.rule=Host(`${GATEWAY_DOMAIN}`)"
+      - "traefik.http.routers.gateway.entrypoints=web"
+      - "traefik.http.routers.gateway.middlewares=gateway-headers"
+      - "traefik.http.services.gateway.loadbalancer.server.port=8080"
+      # Subdomain gateway
+      - "traefik.http.routers.subdomain.rule=HostRegexp(`{subdomain:[a-z0-9-]+}.${GATEWAY_DOMAIN}`)"
+      - "traefik.http.routers.subdomain.entrypoints=web"
+      - "traefik.http.routers.subdomain.middlewares=gateway-headers"
+      - "traefik.http.services.subdomain.loadbalancer.server.port=8080"
+      # Headers middleware (matching nginx config)
+      - "traefik.http.middlewares.gateway-headers.headers.customrequestheaders.Host=${GATEWAY_DOMAIN}"
+      - "traefik.http.middlewares.gateway-headers.headers.customrequestheaders.X-Real-IP=${remote_addr}"
+      - "traefik.http.middlewares.gateway-headers.headers.customrequestheaders.X-Forwarded-For=${remote_addr}"
+      - "traefik.http.middlewares.gateway-headers.headers.customrequestheaders.X-Forwarded-Proto=${scheme}"
 
-  nginx:
+  cluster:
+    labels:
+      - "traefik.enable=true"
+      # Upload endpoint with headers
+      - "traefik.http.routers.upload.rule=Host(`${UPLOAD_DOMAIN}`) && PathPrefix(`/api/v0/`) && (Path(`/api/v0/add`) || Path(`/api/v0/cat`) || Path(`/api/v0/pin/ls`) || Path(`/api/v0/pin/add`))"
+      - "traefik.http.routers.upload.entrypoints=web"
+      - "traefik.http.routers.upload.middlewares=auth,gateway-headers"
+      - "traefik.http.services.upload.loadbalancer.server.port=9095"
+      - "traefik.http.middlewares.auth.basicauth.usersfile=/etc/traefik/.htpasswd"
+
+  traefik:
     ports:
       - "80:80"     # HTTP (for Cloudflare proxy)
-      - "5555:5555" # API
-    command: /bin/sh -c "envsubst '$$GATEWAY_DOMAIN $$UPLOAD_DOMAIN' < /etc/nginx/nginx.conf.template > /tmp/nginx.conf && nginx -g 'daemon off;' -c /tmp/nginx.conf"
-    volumes:
-      - ./nginx.proxy.conf:/etc/nginx/nginx.conf.template:ro
-      - ./htpasswd:/etc/nginx/.htpasswd:ro
+    command:
+      - "--api=true"
+      - "--api.dashboard=true"
+      - "--api.insecure=true"
+      - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+      - "--entrypoints.web.address=:80"
+      - "--log.level=INFO"
     environment:
       - GATEWAY_DOMAIN=${GATEWAY_DOMAIN}
       - UPLOAD_DOMAIN=${UPLOAD_DOMAIN} 
