--- a/packages/bgipfs/templates/docker-compose.proxy.yml
+++ b/packages/bgipfs/templates/docker-compose.proxy.yml
@@ -10,13 +10,19 @@ services:
       # IPFS Gateway Service
       - "traefik.http.services.ipfs-gateway.loadbalancer.server.port=8080"
       
-      # IPFS Gateway Router (handles both paths and subdomains)
-      - "traefik.http.routers.ipfs-gateway.rule=Host(`${GATEWAY_DOMAIN}`) || HostRegexp(`{subdomain:[a-z0-9-]+}.ipfs.${GATEWAY_DOMAIN}`)"
-      - "traefik.http.routers.ipfs-gateway.entrypoints=web"
-      - "traefik.http.routers.ipfs-gateway.middlewares=ipfs-headers"
-      - "traefik.http.routers.ipfs-gateway.service=ipfs-gateway"
+      # Main gateway router
+      - "traefik.http.routers.main-gateway.rule=Host(`${GATEWAY_DOMAIN}`)"
+      - "traefik.http.routers.main-gateway.entrypoints=web"
+      - "traefik.http.routers.main-gateway.middlewares=ipfs-headers"
+      - "traefik.http.routers.main-gateway.service=ipfs-gateway"
       
-      # IPFS Gateway Headers
+      # Subdomain gateway router
+      - "traefik.http.routers.subdomain-gateway.rule=HostRegexp(`{subdomain:[a-z0-9-]+}.ipfs.${GATEWAY_DOMAIN}`)"
+      - "traefik.http.routers.subdomain-gateway.entrypoints=web"
+      - "traefik.http.routers.subdomain-gateway.middlewares=ipfs-headers"
+      - "traefik.http.routers.subdomain-gateway.service=ipfs-gateway"
+      
+      # Headers (same as nginx)
       - "traefik.http.middlewares.ipfs-headers.headers.customrequestheaders.Host=$${host}"
       - "traefik.http.middlewares.ipfs-headers.headers.customrequestheaders.X-Real-IP=$${remote_addr}"
       - "traefik.http.middlewares.ipfs-headers.headers.customrequestheaders.X-Forwarded-For=$${remote_addr}"
@@ -58,6 +64,18 @@ services:
       - "--entrypoints.web.address=:80"
       - "--log.level=DEBUG"
       - "--accesslog=true"
+      # Detailed access logging
+      - "--accesslog.fields.headers.names=Host,X-Forwarded-For,X-Forwarded-Proto,Location"
+      - "--accesslog.fields.defaultmode=keep"
+      - "--accesslog.fields.names.RequestHost=keep"
+      - "--accesslog.fields.names.RequestPath=keep"
+      - "--accesslog.fields.names.RequestMethod=keep"
+      - "--accesslog.fields.names.RequestProtocol=keep"
+      - "--accesslog.fields.names.OriginStatus=keep"
+      # Debug headers
+      - "--entrypoints.web.transport.respondingTimeouts.readTimeout=0"
+      - "--entrypoints.web.transport.respondingTimeouts.writeTimeout=0"
+      - "--entrypoints.web.forwardedHeaders.insecure=true"
     environment:
       - GATEWAY_DOMAIN=${GATEWAY_DOMAIN}
       - UPLOAD_DOMAIN=${UPLOAD_DOMAIN}
