--- a/packages/bgipfs/templates/docker-compose.dns.yml
+++ b/packages/bgipfs/templates/docker-compose.dns.yml
@@ -4,18 +4,44 @@ services:
     ports:
       - "4001:4001"  # swarm
       - "5001:5001"  # api
-      # Note: No 8080 port in DNS mode since gateway is handled by nginx
+    labels:
+      - "traefik.enable=true"
+      
+      # IPFS Gateway Service
+      - "traefik.http.services.ipfs-gateway.loadbalancer.server.port=8080"
+      
+      # Main gateway router
+      - "traefik.http.routers.main-gateway.rule=Host(`${GATEWAY_DOMAIN}`)"
+      - "traefik.http.routers.main-gateway.entrypoints=web"
+      - "traefik.http.routers.main-gateway.service=ipfs-gateway"
+      
+      # Subdomain gateway router
+      - "traefik.http.routers.subdomain-gateway.rule=HostRegexp(`{subdomain:[^.]+}.ipfs.${GATEWAY_DOMAIN}`)"
+      - "traefik.http.routers.subdomain-gateway.entrypoints=web"
+      - "traefik.http.routers.subdomain-gateway.service=ipfs-gateway"
 
-  nginx:
+  cluster:
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.services.upload-service.loadbalancer.server.port=9095"
+      - "traefik.http.routers.upload-router.rule=Host(`${UPLOAD_DOMAIN}`) && PathPrefix(`/api/v0/`) && (Path(`/api/v0/add`) || Path(`/api/v0/cat`) || Path(`/api/v0/pin/ls`) || Path(`/api/v0/pin/add`))"
+      - "traefik.http.routers.upload-router.entrypoints=web"
+      - "traefik.http.routers.upload-router.middlewares=upload-auth"
+      - "traefik.http.routers.upload-router.service=upload-service"
+      - "traefik.http.middlewares.upload-auth.basicauth.usersfile=/etc/traefik/.htpasswd"
+
+  traefik:
     ports:
-      - "80:80"     # HTTP (for certbot challenges)
-      - "443:443"   # HTTPS
-      - "5555:5555" # API
-    command: /bin/sh -c "envsubst '$$GATEWAY_DOMAIN $$UPLOAD_DOMAIN' < /etc/nginx/nginx.conf.template > /tmp/nginx.conf && nginx -g 'daemon off;' -c /tmp/nginx.conf"
-    volumes:
-      - ./nginx.dns.conf:/etc/nginx/nginx.conf.template:ro
-      - ./htpasswd:/etc/nginx/.htpasswd:ro
-      - ./data/certbot/conf:/etc/letsencrypt
+      - "80:80"  # HTTP (for Cloudflare proxy)
+    command:
+      - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+      - "--entrypoints.web.address=:80"
+      - "--log.level=DEBUG"
+      - "--accesslog=true"
     environment:
       - GATEWAY_DOMAIN=${GATEWAY_DOMAIN}
-      - UPLOAD_DOMAIN=${UPLOAD_DOMAIN} 
+      - UPLOAD_DOMAIN=${UPLOAD_DOMAIN}
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./htpasswd:/etc/traefik/.htpasswd:ro
