traefik db, lock down ports

--- a/packages/bgipfs/templates/docker-compose.yml
+++ b/packages/bgipfs/templates/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "4001:4001"  # swarm
       - "8080:8080"  # gateway (IP mode only)
-      - "5001:5001"  # api
+      - "127.0.0.1:5001:5001"  # api access from localhost
     volumes:
       - ./data/ipfs:/data/ipfs
       - ./ipfs.config.json:/data/ipfs/config:ro
@@ -34,8 +34,8 @@ services:
       CLUSTER_SECRET: ${SECRET}
       CLUSTER_PEERADDRESSES: ${PEERADDRESSES}
     ports:
-      - "9094:9094"
-      - "9095:9095"
+      - "127.0.0.1:9094:9094"  # Only accessible from localhost
+      - "127.0.0.1:9095:9095"  # Only accessible from localhost
       - "9096:9096"
     volumes:
       - ./data/ipfs-cluster:/data/ipfs-cluster
@@ -55,14 +55,19 @@ services:
     command:
       - "--api=true"
       - "--api.dashboard=true"
-      - "--api.insecure=true"
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
       - "--entrypoints.web.address=:5555"
       - "--log.level=INFO"
     ports:
       - "5555:5555"
-      - "8081:8080"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./htpasswd:/etc/traefik/.htpasswd:ro 
+      - ./htpasswd:/etc/traefik/.htpasswd:ro
+    labels:
+      - "traefik.enable=true"
+      # Dashboard specific config
+      - "traefik.http.routers.api.rule=Host(`${TRAEFIK_DOMAIN:-traefik.localhost}`)"
+      - "traefik.http.routers.api.service=api@internal"
+      - "traefik.http.routers.api.entrypoints=web"
+      - "traefik.http.routers.api.middlewares=auth"
