--- a/packages/bgipfs/templates/docker-compose.dns.yml
+++ b/packages/bgipfs/templates/docker-compose.dns.yml
@@ -1,9 +1,6 @@
 # DNS mode overrides
 services:
   ipfs:
-    ports:
-      - "4001:4001"  # swarm
-      - "5001:5001"  # api
     labels:
       - "traefik.enable=true"
       
@@ -28,20 +25,15 @@ services:
       - "traefik.http.routers.upload-router.entrypoints=web"
       - "traefik.http.routers.upload-router.middlewares=upload-auth"
       - "traefik.http.routers.upload-router.service=upload-service"
-      - "traefik.http.middlewares.upload-auth.basicauth.usersfile=/etc/traefik/.htpasswd"
 
   traefik:
     ports:
       - "80:80"  # HTTP (for Cloudflare proxy)
     command:
+      - "--api=true"
+      - "--api.dashboard=true"
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
       - "--entrypoints.web.address=:80"
       - "--log.level=DEBUG"
       - "--accesslog=true"
-    environment:
-      - GATEWAY_DOMAIN=${GATEWAY_DOMAIN}
-      - UPLOAD_DOMAIN=${UPLOAD_DOMAIN}
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./htpasswd:/etc/traefik/.htpasswd:ro
