--- a/packages/bgipfs/templates/docker-compose.yml
+++ b/packages/bgipfs/templates/docker-compose.yml
@@ -13,10 +13,15 @@ services:
       - IPFS_GATEWAY_PUBLICGATEWAYS_USESUBDOMAINS=true
     labels:
       - "traefik.enable=true"
-      # IPFS routes
+      # IPFS path-based routes
       - "traefik.http.routers.ipfs.rule=PathPrefix(`/ipfs/`) || PathPrefix(`/ipns/`)"
       - "traefik.http.routers.ipfs.entrypoints=web"
       - "traefik.http.services.ipfs.loadbalancer.server.port=8080"
+      # Subdomain gateway router
+      - "traefik.http.routers.subdomain-gateway.rule=HostRegexp(`{subdomain:[^.]+}.ipfs.localhost`)"
+      - "traefik.http.routers.subdomain-gateway.entrypoints=web"
+      - "traefik.http.services.ipfs-gateway.loadbalancer.server.port=8080"
+      - "traefik.http.routers.subdomain-gateway.service=ipfs-gateway"
 
   cluster:
     container_name: cluster
@@ -46,9 +51,8 @@ services:
       # IPFS Cluster routes
       - "traefik.http.routers.cluster.rule=Path(`/api/v0/add`) || Path(`/api/v0/cat`) || Path(`/api/v0/pin/ls`) || Path(`/api/v0/pin/add`)"
       - "traefik.http.routers.cluster.entrypoints=web"
-      - "traefik.http.routers.cluster.middlewares=auth"
+      - "traefik.http.routers.cluster.middlewares=upload-auth"
       - "traefik.http.services.cluster.loadbalancer.server.port=9095"
-      - "traefik.http.middlewares.auth.basicauth.usersfile=/etc/traefik/.htpasswd"
 
   traefik:
     image: traefik:v2.10
@@ -63,11 +67,15 @@ services:
       - "5555:5555"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./htpasswd:/etc/traefik/.htpasswd:ro
+      - ./auth/admin-htpasswd:/etc/traefik/admin-htpasswd:ro
+      - ./auth/user-htpasswd:/etc/traefik/user-htpasswd:ro
     labels:
       - "traefik.enable=true"
       # Dashboard specific config
       - "traefik.http.routers.api.rule=Host(`${TRAEFIK_DOMAIN:-traefik.localhost}`)"
       - "traefik.http.routers.api.service=api@internal"
       - "traefik.http.routers.api.entrypoints=web"
-      - "traefik.http.routers.api.middlewares=auth"
+      - "traefik.http.routers.api.middlewares=dashboard-auth"
+      - "traefik.http.middlewares.dashboard-auth.basicauth.usersfile=/etc/traefik/admin-htpasswd"
+      # Upload auth middleware
+      - "traefik.http.middlewares.upload-auth.basicauth.usersfile=/etc/traefik/user-htpasswd"
