--- a/packages/bgipfs/templates/init.docker-compose.yml
+++ b/packages/bgipfs/templates/init.docker-compose.yml
@@ -21,4 +21,4 @@ services:
       CLUSTER_PEERADDRESSES: ${PEERADDRESSES}
     volumes:
       - ./data/ipfs-cluster:/data/ipfs-cluster
-    command: ["ipfs-cluster-service", "init", "./service.json"] 
+    command: ["ipfs-cluster-service", "init"] 
