--- a/packages/website/.gitignore
+++ b/packages/website/.gitignore
@@ -42,3 +42,10 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Prisma
+prisma/*.db
+prisma/*.db-journal
+.env
+.env.*
+!.env.example
