--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -8,33 +8,45 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma": "prisma",
+    "postinstall": "prisma generate",
+    "db:seed": "ts-node --project tsconfig.seed.json prisma/seed.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.0.0",
     "@helia/unixfs": "^1.0.0",
+    "@prisma/client": "^6.2.1",
+    "@privy-io/react-auth": "^2.0.8",
+    "@privy-io/server-auth": "^1.18.2",
+    "@tanstack/react-query": "^5.64.2",
+    "@tanstack/react-query-devtools": "^5.64.2",
     "blockstore-s3": "^2.0.2",
     "datastore-s3": "^12.0.2",
     "helia": "^5.1.1",
     "interface-datastore": "^8.3.1",
+    "ipfs-uploader": "workspace:*",
     "multiformats": "^13.3.1",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
-    "zod": "^3.22.4",
-    "ipfs-uploader": "workspace:*"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "bgipfs": "workspace:*",
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "bgipfs": "workspace:*",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
     "postcss": "^8",
+    "prisma": "^6.2.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "prisma": {
+    "seed": "ts-node --project tsconfig.seed.json prisma/seed.ts"
   }
 }
