--- a/packages/ipfs-uploader/package.json
+++ b/packages/ipfs-uploader/package.json
@@ -19,12 +19,9 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.0.0",
-    "@helia/car": "^4.0.2",
-    "@helia/http": "^2.0.3",
-    "@helia/mfs": "^4.0.2",
-    "@ipld/car": "^5.4.0",
     "form-data": "^4.0.1",
     "got": "^14.4.5",
+    "ipfs-car": "^2.0.0",
     "it-all": "^3.0.6",
     "kubo-rpc-client": "^5.0.2",
     "multiformats": "^13.3.1"
