--- a/packages/website/.env.example
+++ b/packages/website/.env.example
@@ -5,3 +5,7 @@ DATABASE_URL="postgresql://user@localhost:5432/bgipfs"
 NEXT_PUBLIC_PRIVY_APP_ID="your-privy-app-id"
 PRIVY_APP_SECRET=your_privy_app_secret
 PRIVY_VERIFICATION_KEY=your-verification-key-from-dashboard
+
+DEFAULT_PIN_LIMIT=1000
+DEFAULT_SIZE_LIMIT=104857600
+NEXT_PUBLIC_DEFAULT_CLUSTER_ID=community
