--- a/packages/ipfs-uploader/package.json
+++ b/packages/ipfs-uploader/package.json
@@ -26,7 +26,7 @@
     "prepublish": "pnpm build"
   },
   "dependencies": {
-    "@bradenmacdonald/s3-lite-client": "npm:@jsr/bradenmacdonald__s3-lite-client@^0.8.0",
+    "@aws-sdk/client-s3": "3.726.0",
     "form-data": "^4.0.1",
     "got": "^14.4.5",
     "ipfs-car": "^2.0.0",
