--- a/packages/ipfs-uploader/package.json
+++ b/packages/ipfs-uploader/package.json
@@ -26,8 +26,8 @@
     "prepublish": "pnpm build"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "3.726.0",
-    "@aws-sdk/lib-storage": "^3.750.0",
+    "@ipld/car": "^5.4.2",
+    "@stauro/filebase-upload": "^1.0.1",
     "form-data": "^4.0.1",
     "got": "^14.4.5",
     "ipfs-car": "^2.0.0",
